2024-04-16  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.5-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.5-alpha01: Krugerstraße';git push
	git tag -a 5.2.5-alpha01 -m 'Functionally identical to 5.2.4';git push --tags

	* Replace doe.jpg with doe.png (transparent background)

2024-04-15  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.4 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.4: Kamehameha I';git push
	git tag -a 5.2.4 -m 'all: --qnt, NCO client nco_qnt_mtd(); ncclimo/ncremap: dbg; ncclimo: ncap2 cxl rgn_avg hst';git push --tags

2024-04-11  Charlie Zender  <zender@uci.edu>

	* ncclimo: Do not append history for rgn_avg computation---too much like encoding a program in a dataset

2024-04-10  Charlie Zender  <zender@uci.edu>

	* NCO 5.2.4-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.4-alpha03: Seminario';git push
	git tag -a 5.2.4-alpha03 -m 'all: --qnt; ncclimo/ncremap: dbg';git push --tags

	* ncclimo/ncremap: Print IMPORTANT notice about SIMULATION vs. PRODUCTION run when dbg_lvel >= 2

	* ncclimo: Add sanity check that fl_nbr > 0

2024-04-09  Charlie Zender  <zender@uci.edu>

	* all: Add --qnt as synonym for --ppc, --quantize

	* ncclimo: Add DEBUG output for issue of Tony B.

	* NCO 5.2.4-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.2.4-alpha02: Goat Cheese Hamburguesa';git push
	git tag -a 5.2.4-alpha02 -m 'all: NCO client nco_qnt_mtd(); ncclimo: tm_bnds err dgn';git push --tags

	* all: convert all NSD/NSB regression tests to use new CF convention

	* all: write old (libnetcdf-emulating) attributes only for DSD (rounding) method, not for NSD/NSB (quantization) methods

2024-04-08  Charlie Zender  <zender@uci.edu>

	* all: verify CF quantization metadata works for libnco

	* all: Invoke nco_qnt_mtd() from nco_ppc_bitmask() so NCO client quantization records CF metadata

	* all: Pass output group and variable IDs to nco_ppc_bitmask()

2024-04-07  Charlie Zender  <zender@uci.edu>
