@@ -362,6 +362,10 @@ variables:
 	PS:long_name = "surface pressure";
 	PS:units = "pascal";
 
+	float ps(time,lat,lon);
+	ps:standard_name = "surface_air_pressure";
+	ps:units = "Pa";
+
 	char fl_dmn(fl_dmn);
 	fl_dmn:long_name = "Character coordinate";
 	fl_dmn:units = "[chr]";
@@ -1191,6 +1195,10 @@ variables:
 	tpt:units = "kelvin";
 	tpt:hieght = "Leave hieght mispelled for NCO User's guide example";
 
+	float ts(time);
+	ts:standard_name = "surface_temperature";
+	ts:units = "K";
+
 	double tpt_dbl(time);
 	tpt_dbl:long_name = "Temperature stored as double precision floating point";
 	tpt_dbl:units = "kelvin";
@@ -1858,6 +1866,7 @@ data:
 	tpt=273.1,273.2,273.3,273.4,273.5,273.6,273.7,273.8,273.9,274.0;
 	tpt_flt=273.1,273.2,273.3,273.4,273.5,273.6,273.7,273.8,273.9,274.0;
 	tpt_dbl=273.1,273.2,273.3,273.4,273.5,273.6,273.7,273.8,273.9,274.0;
+	ts=273.1,273.2,273.3,273.4,273.5,273.6,273.7,273.8,273.9,274.0;
 	two=2.;
 	two_dmn_var=1.5,5.5,9.5,13.5,17.5,21.5;
 	u_sur=0.2632568,0.2568462,0.250575,0.2444414,0.2386823,0.2333696,0.2285719,0.2243158,0.220602,0.2174494;
@@ -1972,6 +1981,16 @@ data:
 				65,66,67,68,69,70,71,72,
 				73,74,75,76,77,78,79,80;
 	PS=			101325,101325,101325,101325,101325,101325,101325,101325,
+				101325,101325,101325,101325,101325,101325,101325,101325,
+				101325,101325,101325,101325,101325,101325,101325,101325,
+				101325,101325,101325,101325,101325,101325,101325,101325,
+  				101325,101325,101325,101325,101325,101325,101325,101325,
+				101325,101325,101325,101325,101325,101325,101325,101325,
+				101325,101325,101325,101325,101325,101325,101325,101325,
+				101325,101325,101325,101325,101325,101325,101325,101325,
+				101325,101325,101325,101325,101325,101325,101325,101325,
+				101325,101325,101325,101325,101325,101325,101325,101325;
+	ps=			101325,101325,101325,101325,101325,101325,101325,101325,
 				101325,101325,101325,101325,101325,101325,101325,101325,
 				101325,101325,101325,101325,101325,101325,101325,101325,
 				101325,101325,101325,101325,101325,101325,101325,101325,
