@@ -1,3 +1,11 @@
+2024-04-17  Charlie Zender  <zender@uci.edu>
+
+	* NCO 5.2.5-alpha02 release procedure:
+	cd ~/nco;git commit -a -m 'Version 5.2.5-alpha02: Udon';git push
+	git tag -a 5.2.5-alpha02 -m 'all: qnt alg nm cf cv';git push --tags
+
+	* nco_qnt_mtd() use lowercase CF-ized algorithm names per draft CF convention, e.g., "granular_bitRound" instead of "Granular BitRound"
+
 2024-04-16  Charlie Zender  <zender@uci.edu>
 
 	* NCO 5.2.5-alpha01 release procedure:
